--- a/css/styles.css
+++ b/css/styles.css
@@ -20,7 +20,7 @@ html {
 body {
     font-family: var(--fuenteParrafos);
     font-size: 1.6rem;
-    line-height: 2rem;
+    line-height: 2;
 }
 
 /* Globales */
@@ -43,18 +43,22 @@ h4 {
 
 h1 {
     font-size: 4.8rem;
+    font-weight: 400;
 }
 
 h2 {
     font-size: 4rem;
+    font-weight: 400;
 }
 
 h3 {
     font-size: 3.2rem;
+    font-weight: 400;
 }
 
 h4 {
     font-size: 2.8rem;
+    font-weight: 400;
 }
 
 img {
@@ -72,4 +76,55 @@ img {
 
 .centrar-texto {
     text-align: center;
+}
+
+/* Header */
+.header {
+    background-image: url(../img/banner.jpg);
+    height: 50rem;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+}
+
+.header__texto {
+    text-align: center;
+    color: var(--blanco);
+    margin-top: 5rem;
+}
+
+@media (min-width: 768px) {
+ .header__texto {
+    margin-top: 10rem;
+ }
+}
+
+@media (min-width: 768px) {
+    .barra {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+}
+
+.logo {
+    color: var(--blanco);
+}
+
+
+.logo__bold {
+    font-weight: 700;
+}
+
+@media (min-width: 768px) {
+ .navegacion {
+    display: flex;
+    gap: 2rem;
+ }
+}
+.navegacion__enlace {
+    display: block;
+    text-align: center;
+    font-size: 1.8rem;
+    color: var(--blanco);
 }
