--- a/css/styles.css
+++ b/css/styles.css
@@ -26,8 +26,9 @@ body {
 
 /* Globales */
 .contenedor {
-    max-width: 120rem;
-    width: 90%;
+    /* max-width: 120rem;
+    width: 90%; */
+    width: min(90%, 120rem);
     margin: 0 auto;
 }
 
@@ -40,6 +41,7 @@ h2,
 h3,
 h4 {
     font-family: var(--fuenteHeading);
+    line-height: 1.2;
 }
 
 h1 {
@@ -98,6 +100,10 @@ img {
     .header__texto {
         margin-top: 10rem;
     }
+}
+
+.barra {
+    padding-top: 4rem;
 }
 
 @media (min-width: 768px) {
@@ -173,4 +179,47 @@ img {
 .boton--primario {
     background-color: var(--primario);
 
+}
+
+.boton--secundario {
+    background-color: var(--negro);
+}
+
+.boton--secundario:hover {
+    background-color: #6d4237;
+}
+
+.cursos {
+    list-style: none;
+}
+
+.widget-curso {
+    border-bottom: 1px solid var(--claro);
+    margin-bottom: 2rem;
+}
+
+.widget-curso:last-of-type {
+    border: none;
+    margin-bottom: 0;
+}
+
+.widget-curso__label {
+    font-family: var(--fuenteHeading);
+    font-weight: 400;
+}
+
+.widget-curso__info {
+    font-weight: 700;
+}
+
+.widget-curso__label,
+.widget-curso__info {
+    font-size: 2rem;
+}
+
+/* Footer */
+.footer {
+    margin-top: 4rem;
+    background-color: var(--negro);
+    padding-bottom: 4rem;
 }
