--- a/css/styles.css
+++ b/css/styles.css
@@ -61,7 +61,7 @@ h3 {
 
 h4 {
     font-size: 2.8rem;
-    font-weight: 400;
+    font-weight: 700;
 }
 
 img {
@@ -170,6 +170,11 @@ img {
     font-family: var(--fuenteHeading);
 }
 
+.boton--centrar {
+    display: block;
+    margin: 0 auto;
+}
+
 @media (min-width: 768px) {
     .boton {
         display: inline-block;
@@ -203,17 +208,21 @@ img {
     margin-bottom: 0;
 }
 
-.widget-curso__label {
+.widget-curso__label,
+.curso__label {
     font-family: var(--fuenteHeading);
-    font-weight: 400;
-}
-
-.widget-curso__info {
     font-weight: 700;
 }
 
+.widget-curso__info,
+.curso__info {
+    font-weight: 400;
+}
+
 .widget-curso__label,
-.widget-curso__info {
+.widget-curso__info,
+.curso__label,
+.curso__info {
     font-size: 2rem;
 }
 
@@ -233,4 +242,55 @@ img {
         grid-template-columns: repeat(2, 1fr);
         column-gap: 2rem;
     }
+}
+
+/* Cursos */
+.curso {
+    padding: 3rem 0;
+    border-bottom: 1px solid var(--claro);
+}
+
+.curso:last-of-type {
+    border-bottom: none;
+}
+
+@media (min-width: 768px) {
+    .curso {
+        display: grid;
+        grid-template-columns: 1fr 2fr;
+        column-gap: 2rem;
+    }
+}
+
+/* Contacto */
+.contacto__bg {
+    background-image: url(../img/contacto.jpg);
+    height: 40rem;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+/* Formulario */
+
+.formulario {
+    background-color: var(--blanco);
+    margin: -5rem auto 0 auto;
+    width: 95%;
+    padding: 5rem;
+}
+
+.campo {
+    display: flex;
+    margin-bottom: 2rem;
+}
+
+.campo__label {
+    flex: 0 0 9rem;
+    text-align: right;
+    padding-right: 2rem;
+}
+
+.campo__field {
+    flex: 1;
+    border: 1px solid var(--claro);
 }
