--- a/css/styles.css
+++ b/css/styles.css
@@ -81,9 +81,17 @@ img {
     text-align: center;
 }
 
+.webp .header {
+    background-image: url(../img/banner.webp);
+}
+
+.no-webp .header {
+    background-image: url(../img/banner.jpg);
+
+}
+
 /* Header */
 .header {
-    background-image: url(../img/banner.jpg);
     height: 50rem;
     background-size: cover;
     background-repeat: no-repeat;
